Fix client list spacing and styling

--- a/app/components/components/section-head/style.module.scss
+++ b/app/components/components/section-head/style.module.scss
@@ -27,6 +27,9 @@
 	padding-top: 1.5rem;
 	@include text-heading;
 	color: $color-accent;
+	@media (prefers-color-scheme: dark){
+		color: $color-foreground;
+	}
 }
 .title__no_separator{
 	margin: 0;
